2022-10-17  Joao Eriberto Mota Filho <eriberto@eriberto.pro.br>
Version 1.8

    [ Joao Eriberto Mota Filho ]

 * Improved CI test for GitHub (added test for make dist).

    [ David Polverari ]

 * Added support for runtime endianness check.
 * Fixed SHA1 output on big-endian architectures.

2021-08-17  Joao Eriberto Mota Filho <eriberto@eriberto.pro.br>
Version 1.7.1

    [ Joao Eriberto Mota Filho ]

 * Changes to process manpage in main Makefile.am.
 * Created CI test in GitHub.
 * Updated install system, removed warnings and bumped required autoconf
   to 2.69.

    [ David Polverari ]

 * New internal feature: release make distcheck tarball on tag push (automated
   distcheck), via GitHub actions.

2020-02-02  Joao Eriberto Mota Filho <eriberto@eriberto.pro.br>
Version 1.7

    [ David Polverari ]

 * src/sizeprobe.c: fixed destination size unit. (Debian bug #886647)
 * src/util.c: fixed non-Linux build error.

2020-01-13  Joao Eriberto Mota Filho <eriberto@eriberto.pro.br>
Version 1.6

    [ Joao Eriberto Mota Filho ]

 * Updated bash completion script.

    [ David Polverari ]

 * Fixed a segfault when using 'errlog='.

2019-11-02  Joao Eriberto Mota Filho <eriberto@eriberto.pro.br>
Version 1.5

    [ Joao Eriberto Mota Filho ]

 * Autotools files:
   - Added a distclean-local target in Makefile.am.
   - Added the autogen.sh file.
   - Improved the configure.ac and Makefile.am files.
   - Moved some build lines from Makefile.am to src/Makefile.am.
   - Removed all autogenerated files.
 * Added a bash completion script (from Debian).
 * Created CONTRIBUTING.md file.
 * Fixed some building warnings.
 * Fixed the message when using hashes (add a newline to generate a space
   between the summary message and hashes.
 * Manpage and help page:
     - Added all new features from David Loveall to manpage and help page.
     - Full reviewed and improved the manpage and help page. Added examples
       in manpage.
     - Using txt2man to produce an updated manpage.